--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
       },
       {
         title: "Understanding JavaScript Closures",
-        url: "https://developer.mozilla.org/en-US/docs/Web/JavaScript/Closures",
+        url: "/understanding-js-closures",
         img: "https://picsum.photos/800/400?grayscale&random=11",
         desc: "JavaScript closures are a fundamental concept that every developer should master. Learn how closures work and how to use them effectively to write cleaner and more powerful code."
       },
       {
         title: "A Guide to Responsive Design",
-        url: "https://css-tricks.com/snippets/css/media-queries-for-standard-devices/",
+        url: "/a-guide-to-responsive-design",
         img: "https://picsum.photos/800/400?grayscale&random=12",
         desc: "Responsive design ensures your website looks great on all devices. This guide covers best practices for building flexible, adaptable layouts with CSS media queries."
       },
