--- a/index.html
+++ b/index.html
@@ -189,25 +189,25 @@
       },
       {
         title: "Debugging Techniques for JavaScript",
-        url: "https://www.freecodecamp.org/news/debugging-javascript/",
+        url: "/debugging-techniques-for-js",
         img: "https://picsum.photos/800/400?grayscale&random=13",
         desc: "Debugging is a crucial skill. Discover various techniques and tools that help you identify and fix bugs efficiently in your JavaScript code."
       },
       {
         title: "Introduction to React Hooks",
-        url: "https://reactjs.org/docs/hooks-intro.html",
+        url: "/intro-to-react-hooks",
         img: "https://picsum.photos/800/400?grayscale&random=14",
         desc: "React Hooks provide a powerful way to use state and lifecycle features in function components. Learn how to get started and build modern React apps."
       },
       {
         title: "CSS Grid vs Flexbox: When to Use Which",
-        url: "https://css-tricks.com/snippets/css/complete-guide-grid/",
+        url: "/css-grid-vs-flexbox:-when-to-use-which",
         img: "https://picsum.photos/800/400?grayscale&random=15",
         desc: "CSS Grid and Flexbox are powerful layout modules. Understand their differences and learn when to use each for responsive web design."
       },
       {
         title: "Writing Clean Code: Best Practices",
-        url: "https://clean-code-developer.com/",
+        url: "/writing-clean-code:-best-practices",
         img: "https://picsum.photos/800/400?grayscale&random=16",
         desc: "Clean code improves maintainability and readability. Explore best practices that help you write better and more professional code."
       }
